Bug 238360 - Oxygen style - disabled indeterminate QProgressBar not animated
Summary: Oxygen style - disabled indeterminate QProgressBar not animated
Status: RESOLVED FIXED
Alias: None
Product: Oxygen
Classification: Plasma
Component: style (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Hugo Pereira Da Costa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-21 07:33 UTC by Jonathan Liu
Modified: 2010-05-21 17:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to animate progress bar even when disabled (1.35 KB, patch)
2010-05-21 08:06 UTC, Jonathan Liu
Details
Patch to animate progress bar even when disabled (1.30 KB, patch)
2010-05-21 12:39 UTC, Jonathan Liu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Liu 2010-05-21 07:33:19 UTC
Version:            (using KDE 4.4.3)
Compiler:          GCC 4.5.0 
OS:                Linux
Installed from:    Archlinux Packages

If setEnabled(false) is called on an indeterminate QProgressBar, the progress bar is not animated under the Oxygen style. On other styles included with Qt, the progress bar is animated.
Comment 1 Jonathan Liu 2010-05-21 08:06:49 UTC
Created attachment 43767 [details]
Patch to animate progress bar even when disabled
Comment 2 Jonathan Liu 2010-05-21 12:39:55 UTC
Created attachment 43769 [details]
Patch to animate progress bar even when disabled
Comment 3 Hugo Pereira Da Costa 2010-05-21 17:34:41 UTC
SVN commit 1129205 by hpereiradacosta:

Allow "disabled" "busy" progressBars to be animated.
Also, reviewed the logic to start busy scrollbar animations
This is based on (but not identical to) the patch provided by Jonathan Liu. 

BUG: 238360


 M  +4 -33     animations/oxygenprogressbarengine.cpp  
 M  +8 -3      animations/oxygenprogressbarengine.h  
 M  +3 -0      oxygenstyle.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129205
Comment 4 Hugo Pereira Da Costa 2010-05-21 17:57:36 UTC
SVN commit 1129208 by hpereiradacosta:

Backport r1129205
Allow "disabled" "busy" progressBars to be animated.
Also, reviewed the logic to start busy scrollbar animations
This is based on (but not identical to) the patch provided by Jonathan Liu.
CCBUG: 238360


 M  +5 -33     animations/oxygenprogressbarengine.cpp  
 M  +8 -3      animations/oxygenprogressbarengine.h  
 M  +3 -0      oxygen.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1129208