Allow "disabled" "busy" progressBars to be animated. Also, reviewed the logic to start busy scrollbar animations This is based on (but not identical to) the patch provided by Jonathan Liu.

BUG: 238360

svn path=/trunk/KDE/kdebase/workspace/; revision=1129205